Add work with tickets

--- a/src/main/resources/locales/ru.properties
+++ b/src/main/resources/locales/ru.properties
@@ -7,9 +7,33 @@ main.projects.login=Логин пользователя
 main.projects.title=Название
 main.projects.is-owner=Является владельцем
 main.projects.is-not-owner=Не является владельцем
+main.tickets.header=🎫 Заявок пользователя:
+main.tickets.number=🎟️ Заявка #
+main.tickets.who-status=Статус юзера
+main.tickets.who-is-reporter=📢 Репортер
+main.tickets.who-is-responsible=👓 Ответственный
+main.tickets.topic=Тема
+main.tickets.project=Проект
+main.tickets.cluster=Кластер
+main.tickets.subject=Заголовок
+main.tickets.desc=Описание
+main.tickets.state=Состояние
+main.tickets.state.answered_by_reporter=Есть ответ от автора
+main.tickets.state.answered_by_support=Есть ответ от поддержки
+main.tickets.state.closed=Закрыта
+main.tickets.state.pending=Ожидает обработки
+main.tickets.state.resolved=Решена
+main.tickets.projects.message=Шаг 1/5. Выберите проект
+main.tickets.topics.message=Шаг 2/5. Выберите тематику
+main.tickets.clusters.message=Шаг 3/5. Выберите кластер
+main.tickets.subject.message=Шаг 4/5. Введите тему заявки (краткое описание)
+main.tickets.message.message=Шаг 5/5. Введите текст заявки (полное описание)
+main.tickets.button.back=🚪 Назад
 main.button.show-user-projects=🎨 Показать проекты пользователя
 main.button.to-auth-settings=🔐 Настройки аутентификации
 main.button.to-locale-settings=🌎 Настройки языка
+main.button.show-tickets=🎫👀 Показать заявки
+main.button.create-tickets=✏️🎫 Создать заявку
 auth.email.message=Введите новый e-mail
 auth.token.message=Введите новый токен
 auth.message=Нажмите на кнопку в меню
