--- a/src/main/resources/locales/en.properties
+++ b/src/main/resources/locales/en.properties
@@ -7,9 +7,33 @@ main.projects.login=User login
 main.projects.title=Title
 main.projects.is-owner=You are the owner
 main.projects.is-not-owner=You aren't the owner
+main.tickets.header=🎫 User tickets count:
+main.tickets.number=🎟️ Ticket #
+main.tickets.who-status=User status
+main.tickets.who-is-reporter=📢 Reporter
+main.tickets.who-is-responsible=👓 Responsible
+main.tickets.topic=Topic
+main.tickets.project=Project
+main.tickets.cluster=Cluster
+main.tickets.subject=Subject
+main.tickets.desc=Description
+main.tickets.state=State
+main.tickets.state.answered_by_reporter=Answered by reporter
+main.tickets.state.answered_by_support=Answered by support
+main.tickets.state.closed=Closed
+main.tickets.state.pending=Pending
+main.tickets.state.resolved=Resolved
+main.tickets.projects.message=Step 1/5. Choose the project
+main.tickets.topics.message=Step 2/5. Choose the topic
+main.tickets.clusters.message=Step 3/5. Choose the cluster
+main.tickets.subject.message=Step 4/5. Enter ticket subject (short description)
+main.tickets.message.message=Step 5/5. Enter ticket message (full description)
+main.tickets.button.back=🚪 Back
 main.button.show-user-projects=🎨 Show user projects
 main.button.to-auth-settings=🔐 Authentication settings
 main.button.to-locale-settings=🌎 Language settings
+main.button.show-tickets=🎫👀 Show tickets
+main.button.create-tickets=✏️🎫 Create new ticket
 auth.email.message=Enter new e-mail
 auth.token.message=Enter new token
 auth.message=Press button in menu
