Add updates info from Octoshell

--- a/src/main/resources/locales/en.properties
+++ b/src/main/resources/locales/en.properties
@@ -56,3 +56,9 @@ auth.button.back=🚪 Back
 locale.message=Choose language
 locale.button.russian=🇷🇺 Русский
 locale.button.english=🇬🇧 English
+notify.ticket.header=🎫 Ticket notification
+notify.ticket.subject=Ticket subject
+notify.ticket.status.close=🚫 Ticket is closed
+notify.ticket.status.resolve=☑️ Ticket is resolved!
+notify.ticket.status.reopen=📖️ Ticket is reopened
+notify.ticket.status.update=➕ Ticket is updated
