--- a/src/main/resources/locales/ru.properties
+++ b/src/main/resources/locales/ru.properties
@@ -56,3 +56,9 @@ auth.button.back=🚪 Назад
 locale.message=Выберите язык
 locale.button.russian=🇷🇺 Русский
 locale.button.english=🇬🇧 English
+notify.ticket.header=🎫 Уведомление о заявке
+notify.ticket.subject=Тема заявки
+notify.ticket.status.close=🚫 Заявка закрыта
+notify.ticket.status.resolve=☑️ Заявка решёна!
+notify.ticket.status.reopen=📖️ Заявка переоткрыта
+notify.ticket.status.update=➕ Заявка обновлена
