Исправил баги и добавил кнопку Информации

--- a/src/main/resources/locales/en.properties
+++ b/src/main/resources/locales/en.properties
@@ -34,6 +34,10 @@ main.button.to-auth-settings=🔐 Authentication settings
 main.button.to-locale-settings=🌎 Language settings
 main.button.show-tickets=🎫👀 Show tickets
 main.button.create-tickets=✏️🎫 Create new ticket
+main.button.information=ℹ️ Information
+main.information=This bot can execute some actions: notify about ticket updates, register new tickets, show the projects.\n\n\
+To use these functions, it is necessary to enter your email and token in the authentication section.\n\n\
+You can generate the bot token in Octoshell in "Profile" section.
 auth.email.message=Enter new e-mail
 auth.token.message=Enter new token
 auth.message=Press button in menu
